re PR debug/11473 (ICE with -gstabs when empty struct inheits from an empty struct)

PR debug/11473
	* dbxout.c (dbxout_type): Use TYPE_SIZE to determine the sizes of
	base classes.

	PR debug/11473
	* g++.dg/debug/debug8.C: New test.

From-SVN: r69413