gcc/testsuite/g++.dg/debug/debug8.C
@@ -1,0 +1,2 @@
+struct t{};
+struct g : public t{};
